   * Added a test scenario, which can be accessed only by starting Wesnoth with the `--debug` command line switch
   * Updates for the 1.15.x series:
       * wesnoth.game_config.version -> wesnoth.current_version()
       * wesnoth.compare_version() -> wesnoth.version() and comparison operators
       * wesnoth.get_sides() -> wesnoth.sides.find()
   * Bumped Wesnoth version requirement to 1.15.14

Version 1.8.0:
   * Added support for flag_icon, defeat_condition, scroll_to_leader, lost,
     village_support, recruit and hidden to [show_side_debug]
   * Added support for race, level, cost and upkeep fields, as well as
     invulnerable status, to [show_quick_debug]
   * side.color is now handled by a text box in [show_side_debug]
   * Various layout corrections in [show_side_debug] and [show_quick_debug]
   * Refactored [set_shroud]
   * Converted documentation to Markdown

Version 1.7.0
   * Removed file ai_helper.lua.
   * Rewritten [get_numerical_minimum] and [get_numerical_maximum]
   * Completely reworked layout and code of HTML readme
   * Enabled Pango markup in [alert], [confirm], [prompt] and [item_dialog]
   * Added [loot] tag, by Elvish_Hunter
   * Added [choice_box] tag, by Elvish_Hunter
   * Bumped Wesnoth version requirement to 1.11.9
   * Fixed a bug in color selection that made [show_side_debug] not working
   * Better indentation of the gui-tags.lua file

Version 1.6.0:
   * Added [earthquake], by Elvish_Hunter.
   * Rewitten [narrate], to add support of all the additional tags and keys
     supported by [message]
   * Added inline StandardSideFilter support to [store_shroud] and [set_shroud].
   * Added color slider to [show_side_debug].
   * Bumped Wesnoth version requirement to 1.11.0

Version 1.5.0:
   * Now [item_dialog] always requires take_string= and leave_string= keys.
   * Added utils.get_text_input function, by SigurdFireDragon.
   * Added Lua remakes of Javascript's standard dialogs: [alert], [confirm] and